# arca-bot

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.production  LICENSE  PASSOS_AWS.md  README.md  apprunner.yaml  bot.py  cloudwatch-config.json  config.example.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  docker-manage.ps1  docker-manage.sh  economy.py  ecs-task-definition.json  lottery.py  package.json  pyproject.toml  requirements.txt  run.py  run_tests.bat  setup.bat  setup.sh  test_config.py  tsconfig.json  user-data.sh
.github/workflows/: ci.yml
config/: bot_config.json  settings.py
data/: .gitkeep  economy.json  voice_tracking_data.json
data/backups/: full_backup_2025-08-02T00-23-21-878Z.json  full_backup_2025-08-02T00-43-26-943Z.json  full_backup_2025-08-02T00-46-12-186Z.json  full_backup_2025-08-02T01-19-54-057Z.json
scripts/: setup-venv.bat  setup.bat  setup.sh  test_installation.bat
src/: __init__.py  main.py
src/commands/: __init__.py  basic.py  economy.py  lottery.py  lottery_panel.py
src/config/: bot_config.json
src/core/: __init__.py
src/core/utils/: __init__.py  cache.py  lottery_panel.py  permissions.py  rate_limiter.py  wallet_panel.py
src/database/: economy.ts  index.ts  migration.ts  raffle.ts  voiceTracking.ts
src/discord/base/: base.app.ts  base.command.ts  base.creators.ts  base.event.ts  (+2 more)
src/modules/: __init__.py  economy.py  lottery.py
src/settings/: backupSystem.ts  economyConfig.ts  env.schema.ts  gracefulShutdown.ts  healthCheck.ts  index.ts  logger.ts  raffleConfig.ts  voiceConfig.ts
tests/: health_check.py  test_bot.py  test_config.py  test_decorators.py  test_new_structure.py
tests/config/: bot_config.json
(+18 files in other folders)
